# TeresaPassword

./: .gitignore  build.gradle  build.gradle.kts  settings.gradle.kts
app/: CMakeLists.txt  build.gradle  build.gradle.kts
app/objectbox-models/: default.json
app/src/androidTest/java/com/jacksonke/teresapassword/: ExampleInstrumentedTest.java  ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: PasswordGenerator.cpp  PasswordGenerator.h  Util.cpp  Util.h  native-lib.cpp
app/src/main/java/com/jacksonke/teresapassword/: ActionBarFragment.java  AddEntityFragment.kt  AddItemDialogFragment.java  AddItemDialogFragment.kt  Constant.java  Constants.kt  DBHelper.java  DBHelper.kt  EditItemDialogFragment.java  EditItemDialogFragment.kt  EditItemFragment.kt  FirstFragment.kt  FragmentBase.java  FragmentSettings.java  FragmentSettings.kt  Generator.java  Generator.kt  ItemListAdapter.kt  ItemListFragment.kt  MainActivity.java  MainActivity.kt  MyArrayAdapter.java  MyArrayAdapter.kt  PasswordApp.java  PasswordApp.kt  PatternActivity.java  PatternLockActivity.kt  PatternLockFragment.kt  SettingsFragment.kt  SiteEntity.java  SiteEntity.kt
app/src/main/res/drawable/: ic_icon_del.xml
app/src/main/res/layout/: activity_main.xml  activity_pattern.xml  activity_pattern_lock.xml  content_main.xml  content_pattern_lock.xml  fragment_add_item.xml  fragment_edit_item.xml  fragment_first.xml  fragment_key_list.xml  fragment_pattern_lock.xml  fragment_settings.xml  list_item_view.xml
app/src/main/res/menu/: actions.xml  menu_main.xml
app/src/main/res/navigation/: nav_graph.xml  nav_graph_pattern_lock.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-v23/: themes.xml
app/src/main/res/xml/: prefs_settings.xml
app/src/test/java/com/jacksonke/teresapassword/: ExampleUnitTest.java  ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
patternlockview/: build.gradle.kts
patternlockview/src/androidTest/java/com/andrognito/patternlockview/: ExampleInstrumentedTest.kt
patternlockview/src/main/java/com/andrognito/patternlockview/: PatternLockView.kt
patternlockview/src/main/java/com/andrognito/patternlockview/listener/: PatternLockViewListener.kt
patternlockview/src/main/java/com/andrognito/patternlockview/utils/: PatternLockUtils.kt  RandomUtils.kt  ResourceUtils.kt
patternlockview/src/main/res/values/: colors.xml  dimens.xml  strings.xml
patternlockview/src/test/java/com/andrognito/patternlockview/: ExampleUnitTest.kt
